Search bar features

--- a/notes/notes_topics/notes_pages/metals_materials_notes.html
+++ b/notes/notes_topics/notes_pages/metals_materials_notes.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>General properties of Ferrous Metals<hr></h2>
+                    <h2  id="FerrousMetals"><hr>General properties of Ferrous Metals<hr></h2>
                 </div>
 
                 <style>
@@ -115,7 +115,7 @@
                     <h2><hr>Ferrous Metals<hr></h2>
                 </div>
 
-                <h3><b><u>Mild Steel (0.05% - 0.30% carbon content):</b></u></h3>
+                <h3 id="MildSteel"><b><u>Mild Steel (0.05% - 0.30% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -142,7 +142,7 @@
                 </table>
                 <h3><b>Uses: </b>General engineering, Construction, Nuts and Bolts, Pipelines, Machinery parts<br><br><br><br></h3>
 
-                <h3><u><b>Medium Carbon Steel (0.30% - 0.60% carbon content):</b></u></h3>
+                <h3 id="MediumCarbonSteel"><u><b>Medium Carbon Steel (0.30% - 0.60% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -167,7 +167,7 @@
                 </table>
                 <h3><b>Uses: </b>Garden tools, Springs, Gears, Railroad<br><br><br><br></h3>
 
-                <h3><u><b>High carbon steel (0.60% - 1.0% carbon content):</b></u></h3>
+                <h3 id="HighCarbonSteel"><u><b>High Carbon Steel (0.60% - 1.0% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -192,7 +192,7 @@
                 </table>
                 <h3><b>Uses: </b>Drills, Expensive, Knives<br><br><br><br></h3>
 
-                <h3><u><b>Cast Iron  (2.0% - 4.0% carbon content):</b></u></h3>
+                <h3 id="CastIron"><u><b>Cast Iron  (2.0% - 4.0% carbon content):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -219,7 +219,7 @@
                 <h3><b>Uses: </b>Machinery, Cooking pots, Disk brakes, Pipes<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>General properties of Non-ferrous Metals<hr></h2>
+                    <h2 id="NonferrousMetals"><hr>General properties of Non-ferrous Metals<hr></h2>
                 </div>
 
                 <style>
@@ -239,7 +239,7 @@
                     <h2><hr>Non-ferrous Metals<hr></h2>
                 </div>
 
-                <h3><u><b>Aluminium:</b></u></h3>
+                <h3 id="Aluminium"><u><b>Aluminium:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -265,7 +265,7 @@
                 </table>
                 <h3><b>Uses: </b>Aircraft, Engine parts, Utensils, Tins<br><br><br><br></h3>
 
-                <h3><u><b>Copper:</b></u></h3>
+                <h3 id="Copper"><u><b>Copper:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -292,7 +292,7 @@
                 </table>
                 <h3><b>Uses: </b>Electrical cables, Circuits, Generators, Heating<br><br><br><br></h3>
 
-                <h3><u><b>Zinc:</b></u></h3>
+                <h3 id="Zinc"><u><b>Zinc:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -318,7 +318,7 @@
                 </table>
                 <h3><b>Uses: </b>Roofing, Castings, Batteries<br><br><br><br></h3>
 
-                <h3><u><b>Tin:</b></u></h3>
+                <h3 id="Tin"><u><b>Tin:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -343,13 +343,13 @@
                 <h3><b>Uses: </b>Furniture, Construction, Exterior furniture, Veneers<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Alloys<hr></h2>
+                    <h2 id="Alloys"><hr>Alloys<hr></h2>
                 </div>
                 <div>
                     <p>Alloys are made by combining two or more metallic elements, to give improved properties such as greater strength or resistance to corrosion.</p>
                 </div>
 
-                <h3><u><b>Stainless Steel (Chromium, Nickel, Steel):</b></u></h3>
+                <h3 id="StainlessSteel"><u><b>Stainless Steel (Chromium, Nickel, Steel):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -375,7 +375,7 @@
                 </table>
                 <h3><b>Uses: </b>Kitchen utensils, Medical tools, Construction<br><br><br><br></h3>
 
-                <h3><u><b>Duralumin (Aluminium, Copper, Manganese):</b></u></h3>
+                <h3 id="Duralumin"><u><b>Duralumin (Aluminium, Copper, Manganese):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -400,7 +400,7 @@
                 </table>
                 <h3><b>Uses: </b>Aviation industry, Automobile industry, Pipelines<br><br><br><br></h3>
 
-                <h3><u><b>Brass (Copper, Zinc):</b></u></h3>
+                <h3 id="Brass"><u><b>Brass (Copper, Zinc):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
