--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>General comparisons of Thermoplastics vs Thermosetting plastics<hr></h2>
+                    <h2 id="Thermoplastics"><hr>General comparisons of Thermoplastics vs Thermosetting plastics<hr></h2>
                 </div>
 
                 <style>
@@ -118,7 +118,7 @@
                     <h2><hr>Thermoplastics<hr></h2>
                 </div>
 
-                <h3><b><u>Acrylic:</b></u></h3>
+                <h3 id="Acrylics"><b><u>Acrylic:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -145,7 +145,7 @@
                 </table>
                 <h3><b>Uses: </b>CD cases, Car light cases, Baths<br><br><br><br></h3>
 
-                <h3><u><b>Polyethylene (PE):</b></u></h3>
+                <h3 id="Polyethylene"><u><b>Polyethylene (PE):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -170,7 +170,7 @@
                 </table>
                 <h3><b>Uses: </b>Buckets, bowls, Cable insulation, bottles<br><br><br><br></h3>
 
-                <h3><u><b>Polyethylene terephthalate (PET):</b></u></h3>
+                <h3 id="Polyethyleneterephthalate"><u><b>Polyethylene terephthalate (PET):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -197,7 +197,7 @@
                 </table>
                 <h3><b>Uses: </b>Fizzy drinks bottles, washing up bottles, fibres for clothing<br><br><br><br></h3>
 
-                <h3><u><b>Polyvinyl Chloride (PVC):</b></u></h3>
+                <h3 id="PolyvinylChloride"><u><b>Polyvinyl Chloride (PVC):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -224,7 +224,7 @@
                 </table>
                 <h3><b>Uses: </b>Pipes, guttering, electrical insulation, floor coverings<br><br><br><br></h3>
 
-                <h3><u><b>Polypropylene (PP):</b></u></h3>
+                <h3 id="Polypropylene"><u><b>Polypropylene (PP):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -251,7 +251,7 @@
                 </table>
                 <h3><b>Uses: </b>Medical syringes, carpets, kitchenware<br><br><br><br></h3>
 
-                <h3><u><b>Acrylonitrile Butadiene Styrene (ABS):</b></u></h3>
+                <h3 id="ABS"><u><b>Acrylonitrile Butadiene Styrene (ABS):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -278,10 +278,10 @@
                 <h3><b>Uses: </b>Mobile phones, safety helmets, pipes<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Thermosetting plastics<hr></h2>
+                    <h2 id="ThermosettingPlastics"><hr>Thermosetting plastics<hr></h2>
                 </div>
 
-                <h3><u><b>Epoxy resin:</b></u></h3>
+                <h3 id="Expoxyresin"><u><b>Epoxy resin:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -305,7 +305,7 @@
                 </table>
                 <h3><b>Uses: </b>Adhesives, paints and coatings, electronics<br><br><br><br></h3>
 
-                <h3><u><b>Urea formaldehyde:</b></u></h3>
+                <h3 id="Ureaformaldehyde"><u><b>Urea formaldehyde:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -330,7 +330,7 @@
                 </table>
                 <h3><b>Uses: </b>Electrical fittings, handles, control knobs, domestic appliance components<br><br><br><br></h3>
 
-                <h3><u><b>Polyester resin:</b></u></h3>
+                <h3 id="Polyesterresin"><u><b>Polyester resin:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -357,7 +357,7 @@
                 <h3><b>Uses: </b>Glass reinforced boats and cars, garden furniture, castings<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Elastomers<hr></h2>
+                    <h2 id="Elastomers"><hr>Elastomers<hr></h2>
                 </div>
 
                 <h3><u><b>Rubber:</b></u></h3>
