--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -112,10 +112,10 @@
                 </ul>
                 
                 <div class="notes-content-subheader">
-                    <h2><hr>Hardwoods<hr></h2>
+                    <h2 id="Hardwoods"><hr>Hardwoods<hr></h2>
                 </div>
 
-                <h3><b><u>Oak:</b></u></h3>
+                <h3 id="Oak"><b><u>Oak:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -141,7 +141,7 @@
                 </table>
                 <h3><b>Uses: </b>Garden furniture, construction, High quality furniture<br><br><br><br></h3>
 
-                <h3><u><b>Mahogany:</b></u></h3>
+                <h3 id="Mahogany"><u><b>Mahogany:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -168,7 +168,7 @@
                 </table>
                 <h3><b>Uses: </b>Furniture, Veneers, Floorboards<br><br><br><br></h3>
 
-                <h3><u><b>Beech:</b></u></h3>
+                <h3 id="Beech"><u><b>Beech:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -194,7 +194,7 @@
                 </table>
                 <h3><b>Uses: </b>Workshop benches, School desks, Furniture<br><br><br><br></h3>
 
-                <h3><u><b>Jelutong:</b></u></h3>
+                <h3 id="Jelutong"><u><b>Jelutong:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -221,7 +221,7 @@
                 </table>
                 <h3><b>Uses: </b>Carving, model making, patternmaking<br><br><br><br></h3>
 
-                <h3><u><b>Balsa:</b></u></h3>
+                <h3 id="Balsa"><u><b>Balsa:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -247,10 +247,10 @@
                 <h3><b>Uses: </b>String instruments, model making<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Softwoods<hr></h2>
+                    <h2 id="Softwoods"><hr>Softwoods<hr></h2>
                 </div>
 
-                <h3><u><b>Pine:</b></u></h3>
+                <h3 id="Pine"><u><b>Pine:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -275,7 +275,7 @@
                 </table>
                 <h3><b>Uses: </b>Roof joists, Floorboards, Construction, Furniture<br><br><br><br></h3>
 
-                <h3><u><b>Cedar:</b></u></h3>
+                <h3 id="Cedar"><u><b>Cedar:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -300,7 +300,7 @@
                 </table>
                 <h3><b>Uses: </b>Garden sheds, Decking, Floorboards<br><br><br><br></h3>
 
-                <h3><u><b>Larch:</b></u></h3>
+                <h3 id="Larch"><u><b>Larch:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -325,7 +325,7 @@
                 </table>
                 <h3><b>Uses: </b>Furniture, Cladding, Boatbuilding, Veneers<br><br><br><br></h3>
 
-                <h3><u><b>Redwood:</b></u></h3>
+                <h3 id="Redwood"><u><b>Redwood:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -366,10 +366,10 @@
                 </ul>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Manufactured Boards<hr></h2>
+                    <h2 id="ManufacturedBoards"><hr>Manufactured Boards<hr></h2>
                 </div>
 
-                <h3><u><b>Plywood:</b></u></h3>
+                <h3 id="Plywood"><u><b>Plywood:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -397,7 +397,7 @@
                 </table>
                 <h3><b>Uses: </b>Beams, Interior structures, shipping crates<br><br><br><br></h3>
 
-                <h3><u><b>Medium Density Fibreboard (MDF):</b></u></h3>
+                <h3 id="MediumDensityFibreboard"><u><b>Medium Density Fibreboard (MDF):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -425,7 +425,7 @@
                 </table>
                 <h3><b>Uses: </b>Roofing, Tables, Cabinets<br><br><br><br></h3>
 
-                <h3><u><b>Particle board:</b></u></h3>
+                <h3 id="ParticleBoard"><u><b>Particle board:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -451,7 +451,7 @@
                 </table>
                 <h3><b>Uses: </b>Flat-pack furniture, Flooring, Wall panelling <br><br><br><br></h3>
 
-                <h3><u><b>Blockboard:</b></u></h3>
+                <h3 id="Blockboard"><u><b>Blockboard:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
