--- a/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
+++ b/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
@@ -362,7 +362,7 @@
                 </table>
                 <h3><b>Uses: </b>Frozen/chilled foods, beauty products<br><br><br><br></h3>
 
-                <h3 id="foillinedboard"><u><b>Foil-lined board:</b></u></h3>
+                <h3 id="Foillinedboard"><u><b>Foil-lined board:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -389,7 +389,7 @@
                 <h3><b>Uses: </b>Food packaging, takeaway food, keeping food warm<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>How papers/boards are made<hr></h2>
+                    <h2 id="Howpapersboardsaremade"><hr>How papers/boards are made<hr></h2>
                 </div>
 
                 <style>
