--- a/notes/notes_topics/notes_pages/textiles_materials_notes.html
+++ b/notes/notes_topics/notes_pages/textiles_materials_notes.html
@@ -94,11 +94,11 @@
                 </div>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Natural fibres<hr></h2>
+                    <h2 id="Naturalfibres"><hr>Natural fibres<hr></h2>
                 </div>
 
 
-                <h3><b><u>Cotton:</b></u></h3>
+                <h3 id="Cotton"><b><u>Cotton:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -124,7 +124,7 @@
                 </table>
                 <h3><b>Uses: </b>Curtains, cushions, clothing, knitting yarns<br><br><br><br></h3>
 
-                <h3><u><b>Linen:</b></u></h3>
+                <h3 id="Linen"><u><b>Linen:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -151,7 +151,7 @@
                 </table>
                 <h3><b>Uses: </b>Tea towels, bed sheets, table cloth, clothes<br><br><br><br></h3>
 
-                <h3><u><b>Wool:</b></u></h3>
+                <h3 id="Wool"><u><b>Wool:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -184,7 +184,7 @@
 
                 
 
-                <h3><u><b>Nylon:</b></u></h3>
+                <h3 id="Nylon"><u><b>Nylon:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -210,7 +210,7 @@
                 </table>
                 <h3><b>Uses: </b>Clothing, cookware, plastic components<br><br><br><br></h3>
 
-                <h3><u><b>Polypropylene fibres:</b></u></h3>
+                <h3 id="Polypropylenefibres"><u><b>Polypropylene fibres:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -234,7 +234,7 @@
                 </table>
                 <h3><b>Uses: </b>Used in concrete for added strength, carpets, carpet backing, gloves<br><br><br><br></h3>
 
-                <h3><u><b>Polyester fibres:</b></u></h3>
+                <h3 id="Polyesterfibres"><u><b>Polyester fibres:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -262,12 +262,12 @@
                 <h3><b>Uses: </b>Conveyor belts, safety belts, car tire reinforcement<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Textile treatments<hr></h2>
+                    <h2 id="Textiletreatments"><hr>Textile treatments<hr></h2>
                 </div>
 
                 
 
-                <h3><u><b>Flame resistant:</b></u></h3>
+                <h3 id="Flameresistant"><u><b>Flame resistant:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -290,7 +290,7 @@
                 </table>
                 <h3><b>Uses: </b>Clothing, cladding, padding<br><br><br><br></h3>
 
-                <h3><u><b>Polytetrafluoroethylene (PTFE):</b></u></h3>
+                <h3 id="PolytetrafluoroethylenePTFE"><u><b>Polytetrafluoroethylene (PTFE):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
