Seearch bar changes

--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -95,7 +95,7 @@
                     </ul>
                 </div>
 
-                <h3><b><u>Sand casting:</b></u></h3>
+                <h3 id="Sandcasting"><b><u>Sand casting:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -135,7 +135,7 @@
                 </table>
                 <h3><b>Uses: </b>Engine blocks, garden furniture, caterpillar tracks<br><br></h3>
 
-                <h3><b><u>Investment casting:</b></u></h3>
+                <h3 id="Investmentcasting"><b><u>Investment casting:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -177,7 +177,7 @@
                 </table>
                 <h3><b>Uses: </b>Turbine blades, gears, machine parts<br><br></h3>
 
-                <h3><b><u>Die casting:</b></u></h3>
+                <h3 id="Diecasting"><b><u>Die casting:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -216,7 +216,7 @@
                 </table>
                 <h3><b>Uses: </b>Taps, model cars<br><br></h3>
 
-                <h3><b><u>Resin casting:</b></u></h3>
+                <h3 id="Resincasting"><b><u>Resin casting:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
@@ -252,7 +252,7 @@
                 </table>
                 <h3><b>Uses: </b>Collectible toys, models, figures, smallscale jewellery<br><br></h3>
 
-                <h3><b><u>Plaster of Paris casting (gypsum):</b></u></h3>
+                <h3 id="PlasterofPariscasting"><b><u>Plaster of Paris casting (gypsum):</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
