--- a/notes/notes_topics/notes_pages/design_decisions_notes.html
+++ b/notes/notes_topics/notes_pages/design_decisions_notes.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="notes-content">
-                <h3><b><u>Pictorial drawings:</u></b></h3>
+                <h3 id="Pictorialdrawings"><b><u>Pictorial drawings:</u></b></h3>
                 <h3><li>Isometric - drawn at 30<sup>o</sup> angles (3D)</li>
                 <li>2-point perspective - drawing originating from two points at the same elevation (2D)</li></h3>
                 <div class="notes-content-subheader">
@@ -93,7 +93,7 @@
             </div>
 
             <div class="notes-content">
-                <h3><b><u>Working drawings:</u></b></h3>
+                <h3 id="Workingdrawings"><b><u>Working drawings:</u></b></h3>
                 <h3><li>3<sup>rd</sup> angle orthographic (2D) - used for engineering frawings</li>
                 <li>Triangulation - used to change scale/transition between square and circular part</li></h3>
                 <div class="notes-content-subheader">
@@ -102,7 +102,7 @@
             </div>
 
             <div class="notes-content">
-                <h3><b><u>Nets:</u></b></h3>
+                <h3 id="Nets"><b><u>Nets:</u></b></h3>
                 <h3><li>Used to draw 3D shapes in an 'unfolded' 2D shape</li>
                     <li>Nets show score lines and tabs etc</li></h3>
                 <div class="notes-content-subheader">
@@ -111,7 +111,7 @@
             </div>
 
             <div class="notes-content">
-                <h3><b><u>Translation:</u></b></h3>
+                <h3 id="Translation"><b><u>Translation:</u></b></h3>
                 <h3><li>Changing from 2D to 3D shapes</li>
                     <li>Used to move drawings and scale drawings</li></h3>
                 <div class="notes-content-subheader">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="notes-content">
-                <h3><b><u>Report writing:</u></b></h3>
+                <h3 id="Reportwriting"><b><u>Report writing:</u></b></h3>
                 <h3><li>Formal report</li>
                     <li>Logical</li>
                     <li>Broken down into sections (summary/overview/purpose/outcomes)</li>
