--- a/notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -92,7 +92,11 @@
                     </ul>
                 </div>
 
-                <h3><b><u>Paints:</b></u></h3>
+                <div class="notes-content-subheader">
+                    <h2 id="Finishes"><hr>Finishes<hr></h2>
+                </div>
+
+                <h3 id="Paints"><b><u>Paints:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -117,7 +121,7 @@
                 </table>
                 <h3><b>Uses: </b>Bridges, metal work, brick work<br><br></h3>
 
-                <h3><b><u>Varnishes:</b></u></h3>
+                <h3 id="Varnishes"><b><u>Varnishes:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -143,7 +147,7 @@
                 </table>
                 <h3><b>Uses: </b>Hardwoods and sodtwoods<br><br></h3>
 
-                <h3><b><u>Sealant:</b></u></h3>
+                <h3 id="Sealant"><b><u>Sealant:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -167,7 +171,7 @@
                 </table>
                 <h3><b>Uses: </b>Pipe threads, aquariums, roofs, hydraulic systems<br><br></h3>
 
-                <h3><b><u>Preservatives:</b></u></h3>
+                <h3 id="Preservatives"><b><u>Preservatives:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -191,7 +195,7 @@
                 </table>
                 <h3><b>Uses: </b>Wood products exposed to water and corrosion<br><br></h3>
 
-                <h3><b><u>Anodising:</b></u></h3>
+                <h3 id="Anodising"><b><u>Anodising:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -224,7 +228,7 @@
                 </table>
                 <h3><b>Uses: </b>Window frames, bike frames<br><br></h3>
 
-                <h3><b><u>Electro-plating:</b></u></h3>
+                <h3 id="Electro-Plating"><b><u>Electro-plating:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -259,7 +263,7 @@
                 </table>
                 <h3><b>Uses: </b>Spoons, taps, shower heads<br><br></h3>
 
-                <h3><b><u>Powder coating:</b></u></h3>
+                <h3 id="PowderCoating"><b><u>Powder coating:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -292,7 +296,7 @@
                 </table>
                 <h3><b>Uses: </b>Cars, wheel arches, sports equipment<br><br></h3>
 
-                <h3><b><u>Oil coating:</b></u></h3>
+                <h3 id="OilCoating"><b><u>Oil coating:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -317,7 +321,7 @@
                 </table>
                 <h3><b>Uses: </b>Teak oil used on woods to give better protection<br><br></h3>
 
-                <h3><b><u>Galvanisation:</b></u></h3>
+                <h3 id="Galvanisation"><b><u>Galvanisation:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -347,7 +351,7 @@
                 </table>
                 <h3><b>Uses: </b>Bridges, pipes, metal brackets<br><br></h3>
 
-                <h3><b><u>Cathodic protection (Impressed current and sacrifical anode):</b></u></h3>
+                <h3 id="CathodicProtection"><b><u>Cathodic protection (Impressed current and sacrifical anode):</b></u></h3>
                 <h3>
                     <p><b>How it works (Impressed current):</b></p>
                     <ul>
@@ -386,7 +390,11 @@
                 </table>
                 <h3><b>Uses: </b>Pipelines, ships, cars<br><br></h3>
 
-                <h3><b><u>Laminating:</b></u></h3>
+                <div class="notes-content-subheader">
+                    <h2 id="PaperandBoardFinishes"><hr>Paper and Boards Finishes<hr></h2>
+                </div>
+
+                <h3 id="PaperLaminating"><b><u>Laminating:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -415,7 +423,7 @@
                 </table>
                 <h3><b>Uses: </b>Posters, pictures, song music<br><br></h3>
 
-                <h3><b><u>Varnishing:</b></u></h3>
+                <h3 id="Varnishing"><b><u>Varnishing:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -444,7 +452,7 @@
                 </table>
                 <h3><b>Uses: </b>Brochures, magazines<br><br></h3>
 
-                <h3><b><u>Hot foil blocking:</b></u></h3>
+                <h3 id="HotFoilBlocking"><b><u>Hot foil blocking:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -476,7 +484,7 @@
                 </table>
                 <h3><b>Uses: </b>Passports, gold foil decorations, wedding invite cards<br><br></h3>
 
-                <h3><b><u>Embossing:</b></u></h3>
+                <h3 id="Embossing"><b><u>Embossing:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
