--- a/notes/notes_topics/notes_pages/heat_treatments_notes.html
+++ b/notes/notes_topics/notes_pages/heat_treatments_notes.html
@@ -94,7 +94,7 @@
                     </ul>
                 </div>
 
-                <h3><b><u>Hardening and tempering:</b></u></h3>
+                <h3 id="HardeningandTempering"><b><u>Hardening and tempering:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -127,7 +127,7 @@
                 </table>
                 <h3><b>Uses: </b>Screwdrivers, wrenches, hardened steel<br><br></h3>
 
-                <h3><b><u>Case hardening:</b></u></h3>
+                <h3 id="CaseHardening"><b><u>Case hardening:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -161,7 +161,7 @@
                 </table>
                 <h3><b>Uses: </b>Firing pins in guns, rifle bolts, engine camshafts<br><br></h3>
 
-                <h3><b><u>Annealing:</b></u></h3>
+                <h3 id="Annealing"><b><u>Annealing:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -190,7 +190,7 @@
                 </table>
                 <h3><b>Uses: </b>Reduce hardness and increase ductility in metals such as steels<br><br></h3>
 
-                <h3><b><u>Normalising:</b></u></h3>
+                <h3 id="Normalising"><b><u>Normalising:</b></u></h3>
                 <h3>
                     <p><b>How it works:</b></p>
                     <ul>
