--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -94,91 +94,85 @@
                 </div>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Physical characteristics<hr></h2>
+                    <h2 id="Physicalcharacteristics"><hr>Physical characteristics<hr></h2>
                 </div>
 
-                <h3><b><u>Electrical conductivity:</b></u></h3>
+                <h3 id="Electricalconductivity"><b><u>Electrical conductivity:</b></u></h3>
                 <h3>The Property that lets <b style="color: rgb(185, 22, 22)">electrical current flow</b> through a material<br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Thermal conductivity:</b></u></h3>
+                <h3 id="Thermalconductivity"><b><u>Thermal conductivity:</b></u></h3>
                 <h3>The Property that lets <b style="color: rgb(185, 22, 22)">thermal energy flow</b> through a material<br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Biodegradability:</b></u></h3>
+                <h3 id="Biodegradability"><b><u>Biodegradability:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">break down over time</b> as a result of <b style="color: rgb(185, 22, 22)">biological activity</b> (being broken down by <b style="color: rgb(185, 22, 22)">microorganisms</b>)<br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Chemical resistance:</b></u></h3>
+                <h3 id="Chemicalresistance"><b><u>Chemical resistance:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand chemical attack</b> <b style="color: rgb(185, 22, 22)"></b> without being broken down<br></h3><br><br/>
                 
 
-                <h3><b><u>Corrosion resistance:</b></u></h3>
+                <h3 id="Corrosionresistance"><b><u>Corrosion resistance:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand rusting from water</b> <b style="color: rgb(185, 22, 22)"></b> without being broken down<br></h3>
                 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Mechanical characteristics<hr></h2>
+                    <h2 id="Mechanicalproperties"><hr>Mechanical characteristics<hr></h2>
                 </div>
 
-                <h3><b><u>Strength (Tensile, Compressive, Torsional, Shear, Bending):</b></u></h3>
+                <h3 id="Strength"><b><u>Strength (Tensile, Compressive, Torsional, Shear, Bending):</b></u></h3>
                 <h3>The ability allowing a material to <b style="color: rgb(185, 22, 22)">resist forces</b> from all directions <b style="color: rgb(185, 22, 22)">(compressive, tensile, bending, shear, torsional).</b> <br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_strength.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Elasticity:</b></u></h3>
+                <h3 id="Elasticity"><b><u>Elasticity:</b></u></h3>
                 <h3> The ability allowing an object or material to <b style="color: rgb(185, 22, 22)">reassume its normal shape</b> after being <b style="color: rgb(185, 22, 22)">stretched or compressed.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_elasticity.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Placticity:</b></u></h3>
+                <h3 id="Placticity"><b><u>Placticity:</b></u></h3>
                 <h3> A material's ability to be <b style="color: rgb(185, 22, 22)">permanently deformed</b> and <b style="color: rgb(185, 22, 22)">retain</b> its deformed shape<br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_placticity.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Malleability:</b></u></h3>
+                <h3 id="Malleability"><b><u>Malleability:</b></u></h3>
                 <h3>A materia's ability to be <b style="color: rgb(185, 22, 22)">deformed by compression without being torn / cracked.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_malleability.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Ductility:</b></u></h3>
+                <h3 id="Ductility"><b><u>Ductility:</b></u></h3>
                 <h3>The ability of a material to be <b style="color: rgb(185, 22, 22)">drawn/stretched out thin</b> (usually into <b style="color: rgb(185, 22, 22)">wires</b>)<br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_ductility.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Hardness:</b></u></h3>
+                <h3 id="Hardness"><b><u>Hardness:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand indentation / abrasion / scratching.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_hardness.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Toughness:</b></u></h3>
+                <h3 id="Toughness"><b><u>Toughness:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">absorb impact force without fracture.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_toughness.png" alt="Diagram of shape dimensions">
                 </div>
 
-                <h3><b><u>Durability:</b></u></h3>
+                <h3 id="Durability"><b><u>Durability:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand wear, pressure, and damage.</b> <br><br><br></h3>
                 <div class="notes-content-picture" >
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_durability.png" alt="Diagram of shape dimensions">
-                </div>
-
-                <h3><b><u>Biodegradability:</b></u></h3>
-                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">break down over time</b> as a result of <b style="color: rgb(185, 22, 22)">biological activity</b> (being broken down by <b style="color: rgb(185, 22, 22)">microorganisms</b>)<br><br><br></h3>
-                <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3><b>Topic test:</b></h3>
@@ -186,12 +180,6 @@
                 <div class="blurbox" style="background-color: #bdbdbd;">
                     <a href="..\..\..\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
                 </div>
-
-                <!-- <div class="download-page">
-                    <h3>Get a copy of this page:
-                        <a href="..\..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
-                    </h3>
-                </div> -->
             </div>
         </div>
 
